src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  color-scheme: dark;
  color: #1a1a1a;
}

/* Overwrite dark mode default styling */
input,
textarea {
  background-color: white;
}

body {
  /* font-family: "Space Grotesk", serif !important; */
  font-family: "Space Mono", serif;
  background-color: #ffffff;
  overflow-x: hidden;
}

#hero {
  background-image: url("/landing/bg.svg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.noise-bg {
  position: fixed;
  inset: 0;
  z-index: 1;
  pointer-events: none;
  opacity: 0.02;
  background:
    repeating-radial-gradient(#fff 0 0.0001%, #000 0 0.0002%) 50% 0/2500px
      2500px,
    repeating-conic-gradient(#fff 0 0.0001%, #000 0 0.0002%) 50% 50%/2500px
      2500px;
  background-blend-mode: difference;
}

.monthly-event {
  background: radial-gradient(
      138.71% 110.11% at 93.15% -36.58%,
      #4255f933 25%,
      #0f1319 100%
    ),
    radial-gradient(61.66% 37.6% at 6.63% 95.08%, #4255f922 25%, #0f1319 100%),
    rgba(26, 26, 26, 0.43);
  box-shadow: 0px 0.5px 16px 0px rgba(200, 200, 255, 0.1);
  border: 1px solid #4255f911;
}

.about-bg {
  background: radial-gradient(
      138.71% 110.11% at 93.15% -36.58%,
      #4255f988 25%,
      #0f1319 50%,
      #4255f901 100%
    ),
    radial-gradient(61.66% 37.6% at 6.63% 95.08%, #4255f988 25%, #0f1319 100%),
    #4255f988;
  box-shadow: 0px 0.5px 16px 0px rgba(200, 200, 255, 0.1);
  border: 1px solid #242424;
}

.footer-clip-path {
  clip-path: polygon(15% 34%, 100% 0%, 100% 100%, 0% 100%);
}

.grad {
  background: linear-gradient(0deg, #4255f922, #080d14);
  filter: blur(20px);
}

/* fade background of hero */

.hero-btn:hover {
  /* Apply a full (all-around) shadow with #79C7FD */
  box-shadow: 0 0 20px 5px rgba(121, 199, 253, 0.7);
}

.hero-fade {
  background: linear-gradient(180deg, #080d1400 0%, #080d14 100%);
}

.about-fade {
  background: linear-gradient(0deg, #080d1400 0%, #080d14 100%);
}

/* Custom minimalist scrollbar */
.custom-scrollbar::-webkit-scrollbar {
  width: 4px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: transparent;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: rgba(59, 130, 246, 0.2);
  border-radius: 4px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: rgba(59, 130, 246, 0.5);
}

/* Firefox */
.custom-scrollbar {
  scrollbar-width: thin;
  scrollbar-color: rgba(59, 130, 246, 0.2) transparent;
}

